# finally

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml
reports_with_html/: class_index.html  function_index.html  index.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html
src/: main.py
tests/: test_main.py
